# ucsel

./: CMakeLists.txt  README.md  courseParser.py  fetchCourseAvailability.py  tests.py
constraints/CS/: 136
py/: CMakeLists.txt  common.py  fetchCourseInfo.py  fetchCoursePrereqs.py  getCourseList.py  lispifyReqs.py
scm/: lang.scm
solver/: Cargo.toml
solver/src/: lib.rs  main.rs
solver/src/solver/: course.rs  mod.rs  requirement.rs  search.rs
src/: CMakeLists.txt  Course.cpp  Course.h  Requirement.h  course.py  main.cpp  makeCourses.py
test/: Cargo.toml
test/src/: main.rs
